third_party/move/move-compiler-v2/tests/more-v1/expansion/pack_no_fields_single_block_expr.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/expansion/pack_no_fields_single_block_expr.move:4:21
  │
4 │         let s = S { false };
  │                     ^^^^^
  │                     │
  │                     Unexpected 'false'
  │                     Expected an identifier
